# Tisch-ML-Model

./: .dockerignore  .gitignore  01_eda_loading.ipynb  02_preprocessing.ipynb  03_knn.ipynb  04_svm.ipynb  Dockerfile  README.md  fly.toml  pyproject.toml  requirements.txt  train.py
.github/workflows/: ci.yml
artifacts/: examples.json  metrics.json
docs/superpowers/plans/: 2026-07-06-serving-layer.md
docs/superpowers/specs/: 2026-07-06-serving-layer-design.md
src/kidney_scrna/: __init__.py  config.py  data.py  evaluate.py  features.py  models.py  serve.py
tests/: test_api.py  test_config.py  test_data.py  test_evaluate.py  test_features.py  test_models.py  test_pipeline.py
