[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kidney-scrna"
version = "1.0.0"
description = "Kidney scRNA-seq cell-type classifier: pipeline, serving API, and demo."
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0", "numpy>=1.24", "scikit-learn>=1.3", "scipy>=1.10",
    "imbalanced-learn>=0.11", "scikit-optimize>=0.9", "joblib>=1.3",
    "fastapi>=0.110", "uvicorn[standard]>=0.29", "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]
notebooks = ["matplotlib>=3.7", "seaborn>=0.12"]

[tool.setuptools.packages.find]
where = ["src"]
